--- a/demo/demo.html
+++ b/demo/demo.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="author" content="Vivian Huang">
 <meta name="created" content="2013-05-31">
-<meta name="modified" content="Mon 17 Jun 2013 04:37:24 PM CST">
+<meta name="modified" content="Mon 17 Jun 2013 04:49:06 PM CST">
 <title>jsTree Prototype</title>
 <link rel="stylesheet" href="../src/jstree.css">
 <link rel="stylesheet" href="css/jquery.jstree.css">
@@ -128,7 +128,7 @@
                             "valid_children" : "none",
                             // If we specify an icon for the default type it WILL OVERRIDE the theme icons
                             "icon" : {
-                                "image" : "img/mp3_16x16.png"
+                                "image" : "img/file_16x16.png"
                             }
                         },
                         "folder": {
